--- a/ui/index.html
+++ b/ui/index.html
@@ -9,7 +9,7 @@
         </div>
         <br>
         <div class="center text-big bold">
-            Welcome to my first ever webapp!!
+            Travel through Gman's world of webapp!!
         </div>
         <script type="text/javascript" src="/ui/main.js">
         </script>
