[imad-console] Updates article-one.html

--- a/article-one.html
+++ b/article-one.html
@@ -1,2 +1,31 @@
 <html>
+    <head>
+        <TITLE>
+            ARTICLE ONE-BY GOUTHAMAN
+        </TITLE>
+    </head>
+ <body>
+     <div>
+         <a href='/'>home</a>
+     </div>
+     <hr/>
+     <h3>
+         ARTICLE ONE
+     </h3>
+     <DIV>
+         OCT 22,2016
+     </DIV>
+     <div>
+         <p1>
+             this is basically a useless para for the coding i practisce
+         </p1>
+         <p2>
+             blah blah blah
+         </p2>
+         <p3>
+             . thank you! for reading this useless code.thank you! for reading this useless code.thank you! for reading this useless code.thank you! for reading this useless code
+         </p3>
+     </div>
+     
+ </body>
 </html>
