[imad-console] Updates article-one.html

--- a/article-one.html
+++ b/article-one.html
@@ -21,7 +21,8 @@
              blah blah blah
          </p>
          <p>
-             . thank you! for reading this useless code.thank you! for reading this useless code.thank you! for reading this useless code.thank you! for reading this useless code
+             thank you! for reading this useless code.thank you! for reading this useless code.thank you! for reading this useless code.
+             thank you! for reading this useless code
          </p>
      </div>
      
