[imad-console] Updates article-one.html

--- a/article-one.html
+++ b/article-one.html
@@ -3,9 +3,17 @@
         <TITLE>
             ARTICLE ONE-BY GOUTHAMAN
         </TITLE>
+    <style>
+       .box{
+           max width: 900px;
+           margin:0 auto;
+           color:grey;
+           font-family:sans-serif;
+       } 
+    </style>
     </head>
  <body>
-     
+   <div class="box">
      <hr/>
      <h3>
          ARTICLE ONE
@@ -25,6 +33,6 @@
              thank you! for reading this useless code
          </p>
      </div>
-     
+  </div>   
  </body>
 </html>
