--- a/article-one.html
+++ b/article-one.html
@@ -6,7 +6,7 @@
     <style>
        .box{
            max width: 900px;
-           margin: auto;
+           margin:300px;
            color:grey;
            font-family:sans-serif;
        } 
