[imad-console] Updates article-one.html

--- a/article-one.html
+++ b/article-one.html
@@ -3,14 +3,7 @@
         <TITLE>
             ARTICLE ONE-BY GOUTHAMAN
         </TITLE>
-    <style>
-       .box{
-           max width: 900px;
-           margin:200px;
-           color:grey;
-           font-family:sans-serif;
-       } 
-    </style>
+    <link href="/ui/style.css" rel="stylesheet" />
     </head>
  <body>
    <div class="box">
