--- a/ui/article two.html
+++ b/ui/article two.html
@@ -4,6 +4,7 @@
             ARTICLE two-BY GOUTHAMAN
         </TITLE>
     </head>
+ <link href="/ui/style.css" rel="stylesheet" />
  <body>
      
      <hr/>
