--- a/ui/article-three.html
+++ b/ui/article-three.html
@@ -3,6 +3,7 @@
         <TITLE>
             ARTICLE THREE-BY GOUTHAMAN
         </TITLE>
+    <link href="/ui/style.css" rel="stylesheet" />
     </head>
  <body>
      
