[imad-console] Updates ui/article-two.html

--- a/ui/article-two.html
+++ b/ui/article-two.html
@@ -3,6 +3,7 @@
         <TITLE>
             ARTICLE TWO-BY GOUTHAMAN
         </TITLE>
+    <link href="/ui/style.css" rel="stylesheet" />
     </head>
  <body>
      
