[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -11,6 +11,9 @@
         <div class="center text-big bold">
             Travel through Gman's world of webapp!!
         </div>
+        <script>
+            alert(Hi!Hope this site helps in enhancing your Hobby of Music listening)
+        </script>
         <script type="text/javascript" src="/ui/main.js">
         </script>
     </body>
