[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -12,7 +12,7 @@
             Travel through Gman's world of webapp!!
         </div>
         <script>
-            alert(Hi!Hope this site helps in enhancing your Hobby of Music listening)
+            alert(Hi!Hope this site helps in enhancing your Hobby of Music listening);
         </script>
         <script type="text/javascript" src="/ui/main.js">
         </script>
