--- a/ui/index.html
+++ b/ui/index.html
@@ -5,7 +5,7 @@
     </head>
     <body>
         <div class="center">
-            <img src="HP-FolderMusic.png" class="img-large"/>
+            <img src="HP-FolderMusic (2).png" class="img-large"/>
         </div>
         <br>
         <div class="center text-big bold">
